--- a/css/tooplate-ben-resume-style.css
+++ b/css/tooplate-ben-resume-style.css
@@ -388,7 +388,7 @@ https://www.tooplate.com/view/2120-ben-resume
   -----------------------------------------*/
 
   .testimonials {
-    background: #f9f9f9;
+    background: #0C0819;
   }
 
   .testimonials-image {
