--- a/css/tooplate-ben-resume-style.css
+++ b/css/tooplate-ben-resume-style.css
@@ -33,7 +33,7 @@ https://www.tooplate.com/view/2120-ben-resume
   :root {
     --primary-color:        #ffd500;
     --white-color:          #ffffff;
-    --dark-color:           #010101;
+    --dark-color:           #121D2F;
     --menu-bg-color:        #212529;
 
     --gray-color:           #909090;
